tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/text-after-table.stderr
TOML parse error at line 1, column 9
  |
1 | [error] this shouldn't be here
  |         ^
invalid table header
expected newline, `#`
